--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div class="header-container">
-      <h1 class="header">RunStory - prepare yourself for marathons</h1>
+      <h1 class="header">RunStory</h1>
     </div>
     <div class="container">
       <div id="map" class="map"></div>
@@ -74,6 +74,21 @@
         </form>
         <div class="workout-notes">
           <p class="workout-notes--header">RunStories notes:</p>
+        </div>
+        <div class="workouts-list-container">
+          <p class="workouts-list--header">Your RunStories:</p>
+          <ul class="workouts-list--main">
+            <li class="runstory">
+              <h4 class="runstory--header">Runstory</h4>
+              <div class="runstory--content">
+                <span class="runstory--datapiece">
+                  <img src="/assets/calendar.png" alt="gfdfg" />
+                  <p class="runstory--datapiece--number">21</p>
+                  <p class="runstory--datapiece--unit">KM</p>
+                </span>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
