small refactorings and additions

--- a/index.html
+++ b/index.html
@@ -70,13 +70,15 @@
               />
             </div>
           </label>
-          <button
-            type="submit"
-            disabled
-            class="workout-form--submitbtn disabled"
-          >
+          <button type="submit" class="workout-form--submitbtn disabled">
             Submit
           </button>
+          <div class="form-hidder"></div>
+          <p class="form-hidder--hint">Select point on the map</p>
+          <span class="discard"
+            ><p class="discard--name">Discard:</p>
+            <button type="button" class="discard--btn">x</button></span
+          >
         </form>
         <div class="workout-notes">
           <p class="workout-notes--header">RunStories notes:</p>
