added scrollbar to the list of runstories and fiexd some minor bugs

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <div class="form-hidder"></div>
           <p class="form-hidder--hint">Select point on the map</p>
           <span class="discard"
-            ><p class="discard--name">Discard:</p>
+            ><p class="discard--name">Discard RunStory:</p>
             <button type="button" class="discard--btn">x</button></span
           >
         </form>
