minor bug fixed

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               />
               <img
                 src="./assets/distance.png"
-                alt="Calendar icon"
+                alt="Distance icon"
                 class="workout-form--icons"
               />
             </div>
@@ -54,7 +54,7 @@
               />
               <img
                 src="./assets/chronometer.png"
-                alt="Calendar icon"
+                alt="Chronomener icon"
                 class="workout-form--icons"
               />
             </div>
